--- a/Website/styles.css
+++ b/Website/styles.css
@@ -75,6 +75,8 @@ h1 {
 #packageGrid {
   overflow-y: auto;
   width: 100%;
+  height: calc(100vh - 35rem);
+  min-height: 8rem;
 }
 
 .packages .packageName {
